Table Category {
  id uuid [pk]
  name varchar [not null]
  createdAt timestamp
  updatedAt timestamp

  Indexes {
    (name) [name:"index_category_name"]
    id [unique]
  }
}

Table User {
  id uuid [pk]
  email varchar [not null, unique]
  password varchar [not null]
  createdAt timestamp
  updatedAt timestamp

  Indexes {
    (email) [name:"index_user_email"]
    id [unique]
  }
}

Enum roleName {
  staff
  admin
}

Table Profile  {
  id uuid [pk]
  username varchar [null, unique]
  imageUrl varchar [null]
  fullname varchar [null]
  dateOfBirth date [null]
  UserId uuid [ref: - User.id] // 1:1 Relationship
  role roleName [default: 'staff']
  createdAt timestamp
  updatedAt timestamp

  Indexes {
    (fullname) [name:"index_profile_fullname"]
    username [unique] [name:"index_profile_username"]
    id [unique]
  }
}

Table Tool {
  id uuid [pk]
  code varchar [null, unique] 
  name varchar [not null]
  price int [not null]
  stock int [not null]
  imageUrl varchar [null]
  CategoryId uuid 
  ProfileId uuid
  createdAt timestamp
  updatedAt timestamp

  Indexes {
    (code) [name:"index_tool_code"]
    id [unique]
  }
}

Ref: Tool.ProfileId > Profile.id // N:1
Ref: Tool.CategoryId > Category.id // N:1